--- a/vsn-task-front/src/app/components/template/nav/nav.component.html
+++ b/vsn-task-front/src/app/components/template/nav/nav.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="conteiner">
     <mat-sidenav mode="side" opened>
         <mat-nav-list>
-            <a mat-list-item>
+            <a routerLink="" routerLinkActive="router-link-active"  mat-list-item>
                 <i class="material-icons">home</i>Home
             </a>
             <a mat-list-item>
@@ -14,6 +14,6 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-        Aqui vai ficar o conteudo da página!
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
