Aula 32 - Componente OWNER-READ (Parte 1).

--- a/vsn-task-front/src/app/components/template/nav/nav.component.html
+++ b/vsn-task-front/src/app/components/template/nav/nav.component.html
@@ -4,11 +4,11 @@
             <a routerLink="" routerLinkActive="router-link-active"  mat-list-item>
                 <i class="material-icons">home</i>Home
             </a>
-            <a mat-list-item>
-                <i class="material-icons">check_box</i>Task
+            <a routerLink="owners" mat-list-item>
+                <i class="material-icons">accessibility</i>Owners
             </a>
             <a mat-list-item>
-                <i class="material-icons">accessibility</i>Owner
+                <i class="material-icons">check_box</i>Tasks
             </a>
         </mat-nav-list>
     </mat-sidenav>
