--- a/vsn-task-front/src/app/components/views/owner/owner-read/owner-read.component.html
+++ b/vsn-task-front/src/app/components/views/owner/owner-read/owner-read.component.html
@@ -5,31 +5,31 @@
 
     <div class="mat-elevation-z8 content-table">
 
-    <table class="table" mat-table>
+    <table class="table" mat-table [dataSource]="owners"> 
 
         <!-- Id Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
+          <td mat-cell *matCellDef="let row"> {{ row.id }} </td>
         </ng-container>
       
         <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> NOME </th>
-          <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
+          <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
         </ng-container>
 
                 <!-- E-Mail Column -->
                 <ng-container matColumnDef="email">
                     <th mat-header-cell *matHeaderCellDef> E-MAIL </th>
-                    <td mat-cell *matCellDef="let element"> {{ element.email }} </td>
+                    <td mat-cell *matCellDef="let row"> {{ row.email }} </td>
                   </ng-container>
 
                   
         <!-- Ações Column -->
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef> AÇÕES </th>
-          <td mat-cell *matCellDef="let element"> {{ element.acoes }} </td>
+          <td mat-cell *matCellDef="let row">  </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
