--- a/vsn-task-front/src/app/components/views/owner/owner-read/owner-read.component.css
+++ b/vsn-task-front/src/app/components/views/owner/owner-read/owner-read.component.css
@@ -14,6 +14,27 @@
     font-weight: 800;
 }
 
+button {
+    margin-bottom: .8rem;
+}
+
 .table {
     width: 100%;
+}
+
+.task {
+    color: green;
+    margin-left: 0.5rem;
+}
+
+.edit {
+    color: blue;
+}
+
+.delete {
+    color: red;
+}
+
+.mat-header {
+    width: 5rem;
 }
